fix alignment of titles

--- a/app/assets/sass/module/cluster.sass
+++ b/app/assets/sass/module/cluster.sass
@@ -111,6 +111,7 @@
   width: inherit
   padding: 0 60px 0 15px
   height: auto
+  display: block
 
 .clsp-options
   box-sizing: border-box
